JK - added some routes w corresponding controllers
